# NDKDemo

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/thisfeng/ndkdemo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Hello.c  com_thisfeng_ndkdemo2_JNI.h
app/src/main/java/com/thisfeng/ndkdemo2/: JNI.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/thisfeng/ndkdemo2/: ExampleUnitTest.java
ccalljava/: build.gradle
ccalljava/src/androidTest/java/com/thisfeng/ccalljava/: ExampleInstrumentedTest.java
ccalljava/src/main/: AndroidManifest.xml
ccalljava/src/main/cpp/: CMakeLists.txt  ccalljava.c
ccalljava/src/main/java/com/thisfeng/ccalljava/: JNI.java  MainActivity.java
ccalljava/src/main/res/layout/: activity_main.xml
ccalljava/src/test/java/com/thisfeng/ccalljava/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
